--- a/license/src/main/webapp/WEB-INF/pages/showallcodes2.html
+++ b/license/src/main/webapp/WEB-INF/pages/showallcodes2.html
@@ -27,33 +27,19 @@
 				<div>
 					<h2>序列号查询</h2>
 				</div>
+					<a href="/license/licenseController/tocreatecode"  style="margin-left:850px;font-weight:bold;font-size:23px">生成序列号</a>
 				
-						<!-- <div class="grid_4"> -->
-						<div>
-								<p>
-								<span id="spantag" style="margin-left:30px">按照医院搜索</span>
-								<select>
-									<option>Development</option>
-									<option>Marketing</option>
-									<option>Design</option>
-									<option>IT</option>
-								</select>
-								<input type="submit" value="Search" />
-							    <a href="/license/licenseController/tocreatecode"  style="margin-left:500px;font-weight:bold;font-size:23px">生成序列号</a>
-								</p>								
-						</div>
-						
 				<div class="grid_17">
 					<table class="allcodes">
 							<tr>
-								<th>序号</th>
-								<th>原序列号</th>
-								<th>生成日期</th>
-								<th>到期日期</th>
-								<th>加密序列号</th>
-								<th>有效天数</th>
-								<th>医院名称</th>
-								<th colspan="2" width="10%">操作</th>
+								<th style="width: 7%">序号</th>
+								<th style="width: 25%">原序列号</th>
+								<th style="width: 10%">生成日期</th>
+								<th style="width: 10%">到期日期</th>
+								<th style="width: 20%">加密序列号</th>
+								<th style="width: 5%">有效天数</th>
+								<th style="width: 15%">医院名称</th>
+								<th style="width: 8%">操作</th>
 							</tr>
 					</table>
 				</div>
